resources/Grupo07 V1.3/y.output
Terminals unused in grammar

   OP_COMPARACION


Gramática

    0 $accept: pgm $end

    1 pgm: programa

    2 programa: PR_BEGINPROG lista_sentencia PR_ENDPROG
    3         | dec_var PR_BEGINPROG lista_sentencia PR_ENDPROG

    4 dec_var: PR_VAR lista_dec_var PR_ENDVAR

    5 lista_dec_var: linea_dec_var PUNTO_Y_COMA
    6              | linea_dec_var PUNTO_Y_COMA lista_dec_var

    7 linea_dec_var: COR_ABRE lista_tipos COR_CIERRA DOS_PUNTOS COR_ABRE lista_variables COR_CIERRA

    8 lista_tipos: tipo
    9            | tipo COMA lista_tipos

   10 tipo: PR_INT
   11     | PR_FLOAT
   12     | PR_STRING

   13 lista_variables: TOKEN_ID
   14                | TOKEN_ID COMA lista_variables

   15 lista_sentencia: sentencia
   16                | sentencia lista_sentencia

   17 sentencia: sentencia_take PUNTO_Y_COMA
   18          | seleccion
   19          | sent_repeat
   20          | sent_repeat_especial
   21          | sent_asignacion PUNTO_Y_COMA
   22          | sent_put PUNTO_Y_COMA
   23          | sent_get PUNTO_Y_COMA

   24 sent_put: PR_PUT TOKEN_ID
   25         | PR_PUT CONST_STR

   26 sent_get: PR_GET TOKEN_ID

   27 seleccion: comienzo_if lista_sentencia fin_if
   28          | comienzo_if lista_sentencia comienzo_else lista_sentencia fin_if

   29 comienzo_if: PR_IF PAR_ABRE condicion PAR_CIERRA PR_THEN

   30 comienzo_else: PR_ELSE

   31 fin_if: PR_ENDIF

   32 sent_repeat: comienzoWhile finCondicion lista_sentencia finWhile

   33 comienzoWhile: PR_WHILE

   34 finCondicion: PAR_ABRE condicion PAR_CIERRA

   35 finWhile: PR_ENDWHILE

   36 condicion: condicion_simple
   37          | condicion_multiple

   38 condicion_simple: expresion OP_MENOR expresion
   39                 | expresion OP_MENOR_IGUAL expresion
   40                 | expresion OP_MAYOR expresion
   41                 | expresion OP_MAYOR_IGUAL expresion
   42                 | expresion OP_DISTINTO expresion
   43                 | expresion OP_IGUAL_IGUAL expresion
   44                 | OP_LOG_NOT expresion OP_MENOR expresion
   45                 | OP_LOG_NOT expresion OP_MENOR_IGUAL expresion
   46                 | OP_LOG_NOT expresion OP_MAYOR expresion
   47                 | OP_LOG_NOT expresion OP_MAYOR_IGUAL expresion
   48                 | OP_LOG_NOT expresion OP_DISTINTO expresion
   49                 | OP_LOG_NOT expresion OP_IGUAL_IGUAL expresion

   50 condicion_multiple: condicion_simple OP_LOG_AND condicion_simple
   51                   | condicion_simple OP_LOG_OR condicion_simple

   52 expresion: expresion OP_SUMA termino
   53          | expresion OP_RESTA termino
   54          | termino

   55 termino: termino OP_MULTIPLICACION factor
   56        | termino OP_DIVISION factor
   57        | factor

   58 factor: CONST_INT
   59       | CONST_FLOAT
   60       | TOKEN_ID
   61       | PAR_ABRE expresion PAR_CIERRA

   62 sent_asignacion: TOKEN_ID OP_ASIGNACION asignado

   63 asignado: expresion
   64         | CONST_STR
   65         | CONST_STR CONCAT CONST_STR
   66         | TOKEN_ID CONCAT CONST_STR
   67         | CONST_STR CONCAT TOKEN_ID
   68         | TOKEN_ID CONCAT TOKEN_ID

   69 sent_repeat_especial: PR_WHILE estructura_in PR_DO lista_sentencia PR_ENDWHILE

   70 estructura_in: TOKEN_ID PR_IN COR_ABRE lista_expresiones COR_CIERRA

   71 lista_expresiones: expresion
   72                  | expresion COMA lista_expresiones

   73 sentencia_take: PR_TAKE PAR_ABRE definicion_take PAR_CIERRA

   74 definicion_take: OP_SUMA PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE lista_constantes COR_CIERRA
   75                | OP_SUMA PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE COR_CIERRA
   76                | OP_RESTA PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE lista_constantes COR_CIERRA
   77                | OP_RESTA PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE COR_CIERRA
   78                | OP_MULTIPLICACION PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE lista_constantes COR_CIERRA
   79                | OP_MULTIPLICACION PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE COR_CIERRA
   80                | OP_DIVISION PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE lista_constantes COR_CIERRA
   81                | OP_DIVISION PUNTO_Y_COMA CONST_INT PUNTO_Y_COMA COR_ABRE COR_CIERRA

   82 lista_constantes: CONST_INT
   83                 | lista_constantes PUNTO_Y_COMA CONST_INT


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOKEN_ID (258) 13 14 24 26 60 62 66 67 68 70
CONST_INT (259) 58 74 75 76 77 78 79 80 81 82 83
CONST_STR (260) 25 64 65 66 67
CONST_FLOAT (261) 59
PR_BEGINPROG (262) 2 3
PR_ENDPROG (263) 2 3
PR_VAR (264) 4
PR_ENDVAR (265) 4
PR_TAKE (266) 73
PR_FLOAT (267) 11
PR_INT (268) 10
PR_STRING (269) 12
PR_IF (270) 29
PR_THEN (271) 29
PR_ELSE (272) 30
PR_ENDIF (273) 31
PR_WHILE (274) 33 69
PR_DO (275) 69
PR_IN (276) 70
PR_ENDWHILE (277) 35 69
OP_ASIGNACION (278) 62
OP_SUMA (279) 52 74 75
OP_RESTA (280) 53 76 77
OP_MULTIPLICACION (281) 55 78 79
OP_DIVISION (282) 56 80 81
PAR_ABRE (283) 29 34 61 73
PAR_CIERRA (284) 29 34 61 73
COR_ABRE (285) 7 70 74 75 76 77 78 79 80 81
COR_CIERRA (286) 7 70 74 75 76 77 78 79 80 81
OP_MAYOR (287) 40 46
OP_MAYOR_IGUAL (288) 41 47
OP_MENOR (289) 38 44
OP_MENOR_IGUAL (290) 39 45
OP_DISTINTO (291) 42 48
OP_COMPARACION (292)
OP_IGUAL_IGUAL (293) 43 49
OP_LOG_AND (294) 50
OP_LOG_OR (295) 51
OP_LOG_NOT (296) 44 45 46 47 48 49
COMA (297) 9 14 72
PUNTO_Y_COMA (298) 5 6 17 21 22 23 74 75 76 77 78 79 80 81 83
DOS_PUNTOS (299) 7
CONCAT (300) 65 66 67 68
PR_GET (301) 26
PR_PUT (302) 24 25


No terminales con las reglas donde aparecen

$accept (48)
    en la izquierda: 0
pgm (49)
    en la izquierda: 1, en la derecha: 0
programa (50)
    en la izquierda: 2 3, en la derecha: 1
dec_var (51)
    en la izquierda: 4, en la derecha: 3
lista_dec_var (52)
    en la izquierda: 5 6, en la derecha: 4 6
linea_dec_var (53)
    en la izquierda: 7, en la derecha: 5 6
lista_tipos (54)
    en la izquierda: 8 9, en la derecha: 7 9
tipo (55)
    en la izquierda: 10 11 12, en la derecha: 8 9
lista_variables (56)
    en la izquierda: 13 14, en la derecha: 7 14
lista_sentencia (57)
    en la izquierda: 15 16, en la derecha: 2 3 16 27 28 32 69
sentencia (58)
    en la izquierda: 17 18 19 20 21 22 23, en la derecha: 15 16
sent_put (59)
    en la izquierda: 24 25, en la derecha: 22
sent_get (60)
    en la izquierda: 26, en la derecha: 23
seleccion (61)
    en la izquierda: 27 28, en la derecha: 18
comienzo_if (62)
    en la izquierda: 29, en la derecha: 27 28
comienzo_else (63)
    en la izquierda: 30, en la derecha: 28
fin_if (64)
    en la izquierda: 31, en la derecha: 27 28
sent_repeat (65)
    en la izquierda: 32, en la derecha: 19
comienzoWhile (66)
    en la izquierda: 33, en la derecha: 32
finCondicion (67)
    en la izquierda: 34, en la derecha: 32
finWhile (68)
    en la izquierda: 35, en la derecha: 32
condicion (69)
    en la izquierda: 36 37, en la derecha: 29 34
condicion_simple (70)
    en la izquierda: 38 39 40 41 42 43 44 45 46 47 48 49, en la derecha:
    36 50 51
condicion_multiple (71)
    en la izquierda: 50 51, en la derecha: 37
expresion (72)
    en la izquierda: 52 53 54, en la derecha: 38 39 40 41 42 43 44
    45 46 47 48 49 52 53 61 63 71 72
termino (73)
    en la izquierda: 55 56 57, en la derecha: 52 53 54 55 56
factor (74)
    en la izquierda: 58 59 60 61, en la derecha: 55 56 57
sent_asignacion (75)
    en la izquierda: 62, en la derecha: 21
asignado (76)
    en la izquierda: 63 64 65 66 67 68, en la derecha: 62
sent_repeat_especial (77)
    en la izquierda: 69, en la derecha: 20
estructura_in (78)
    en la izquierda: 70, en la derecha: 69
lista_expresiones (79)
    en la izquierda: 71 72, en la derecha: 70 72
sentencia_take (80)
    en la izquierda: 73, en la derecha: 17
definicion_take (81)
    en la izquierda: 74 75 76 77 78 79 80 81, en la derecha: 73
lista_constantes (82)
    en la izquierda: 82 83, en la derecha: 74 76 78 80 83


estado 0

    0 $accept: . pgm $end

    PR_BEGINPROG  desplazar e ir al estado 1
    PR_VAR        desplazar e ir al estado 2

    pgm       ir al estado 3
    programa  ir al estado 4
    dec_var   ir al estado 5


estado 1

    2 programa: PR_BEGINPROG . lista_sentencia PR_ENDPROG

    TOKEN_ID  desplazar e ir al estado 6
    PR_TAKE   desplazar e ir al estado 7
    PR_IF     desplazar e ir al estado 8
    PR_WHILE  desplazar e ir al estado 9
    PR_GET    desplazar e ir al estado 10
    PR_PUT    desplazar e ir al estado 11

    lista_sentencia       ir al estado 12
    sentencia             ir al estado 13
    sent_put              ir al estado 14
    sent_get              ir al estado 15
    seleccion             ir al estado 16
    comienzo_if           ir al estado 17
    sent_repeat           ir al estado 18
    comienzoWhile         ir al estado 19
    sent_asignacion       ir al estado 20
    sent_repeat_especial  ir al estado 21
    sentencia_take        ir al estado 22


estado 2

    4 dec_var: PR_VAR . lista_dec_var PR_ENDVAR

    COR_ABRE  desplazar e ir al estado 23

    lista_dec_var  ir al estado 24
    linea_dec_var  ir al estado 25


estado 3

    0 $accept: pgm . $end

    $end  desplazar e ir al estado 26


estado 4

    1 pgm: programa .

    $default  reduce usando la regla 1 (pgm)


estado 5

    3 programa: dec_var . PR_BEGINPROG lista_sentencia PR_ENDPROG

    PR_BEGINPROG  desplazar e ir al estado 27


estado 6

   62 sent_asignacion: TOKEN_ID . OP_ASIGNACION asignado

    OP_ASIGNACION  desplazar e ir al estado 28


estado 7

   73 sentencia_take: PR_TAKE . PAR_ABRE definicion_take PAR_CIERRA

    PAR_ABRE  desplazar e ir al estado 29


estado 8

   29 comienzo_if: PR_IF . PAR_ABRE condicion PAR_CIERRA PR_THEN

    PAR_ABRE  desplazar e ir al estado 30


estado 9

   33 comienzoWhile: PR_WHILE .
   69 sent_repeat_especial: PR_WHILE . estructura_in PR_DO lista_sentencia PR_ENDWHILE

    TOKEN_ID  desplazar e ir al estado 31

    $default  reduce usando la regla 33 (comienzoWhile)

    estructura_in  ir al estado 32


estado 10

   26 sent_get: PR_GET . TOKEN_ID

    TOKEN_ID  desplazar e ir al estado 33


estado 11

   24 sent_put: PR_PUT . TOKEN_ID
   25         | PR_PUT . CONST_STR

    TOKEN_ID   desplazar e ir al estado 34
    CONST_STR  desplazar e ir al estado 35


estado 12

    2 programa: PR_BEGINPROG lista_sentencia . PR_ENDPROG

    PR_ENDPROG  desplazar e ir al estado 36


estado 13

   15 lista_sentencia: sentencia .
   16                | sentencia . lista_sentencia

    TOKEN_ID  desplazar e ir al estado 6
    PR_TAKE   desplazar e ir al estado 7
    PR_IF     desplazar e ir al estado 8
    PR_WHILE  desplazar e ir al estado 9
    PR_GET    desplazar e ir al estado 10
    PR_PUT    desplazar e ir al estado 11

    $default  reduce usando la regla 15 (lista_sentencia)

    lista_sentencia       ir al estado 37
    sentencia             ir al estado 13
    sent_put              ir al estado 14
    sent_get              ir al estado 15
    seleccion             ir al estado 16
    comienzo_if           ir al estado 17
    sent_repeat           ir al estado 18
    comienzoWhile         ir al estado 19
    sent_asignacion       ir al estado 20
    sent_repeat_especial  ir al estado 21
    sentencia_take        ir al estado 22


estado 14

   22 sentencia: sent_put . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 38


estado 15

   23 sentencia: sent_get . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 39


estado 16

   18 sentencia: seleccion .

    $default  reduce usando la regla 18 (sentencia)


estado 17

   27 seleccion: comienzo_if . lista_sentencia fin_if
   28          | comienzo_if . lista_sentencia comienzo_else lista_sentencia fin_if

    TOKEN_ID  desplazar e ir al estado 6
    PR_TAKE   desplazar e ir al estado 7
    PR_IF     desplazar e ir al estado 8
    PR_WHILE  desplazar e ir al estado 9
    PR_GET    desplazar e ir al estado 10
    PR_PUT    desplazar e ir al estado 11

    lista_sentencia       ir al estado 40
    sentencia             ir al estado 13
    sent_put              ir al estado 14
    sent_get              ir al estado 15
    seleccion             ir al estado 16
    comienzo_if           ir al estado 17
    sent_repeat           ir al estado 18
    comienzoWhile         ir al estado 19
    sent_asignacion       ir al estado 20
    sent_repeat_especial  ir al estado 21
    sentencia_take        ir al estado 22


estado 18

   19 sentencia: sent_repeat .

    $default  reduce usando la regla 19 (sentencia)


estado 19

   32 sent_repeat: comienzoWhile . finCondicion lista_sentencia finWhile

    PAR_ABRE  desplazar e ir al estado 41

    finCondicion  ir al estado 42


estado 20

   21 sentencia: sent_asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 43


estado 21

   20 sentencia: sent_repeat_especial .

    $default  reduce usando la regla 20 (sentencia)


estado 22

   17 sentencia: sentencia_take . PUNTO_Y_COMA

    PUNTO_Y_COMA  desplazar e ir al estado 44


estado 23

    7 linea_dec_var: COR_ABRE . lista_tipos COR_CIERRA DOS_PUNTOS COR_ABRE lista_variables COR_CIERRA

    PR_FLOAT   desplazar e ir al estado 45
    PR_INT     desplazar e ir al estado 46
    PR_STRING  desplazar e ir al estado 47

    lista_tipos  ir al estado 48
    tipo         ir al estado 49


estado 24

    4 dec_var: PR_VAR lista_dec_var . PR_ENDVAR

    PR_ENDVAR  desplazar e ir al estado 50


estado 25

    5 lista_dec_var: linea_dec_var . PUNTO_Y_COMA
    6              | linea_dec_var . PUNTO_Y_COMA lista_dec_var

    PUNTO_Y_COMA  desplazar e ir al estado 51


estado 26

    0 $accept: pgm $end .

    $default  aceptar


estado 27

    3 programa: dec_var PR_BEGINPROG . lista_sentencia PR_ENDPROG

    TOKEN_ID  desplazar e ir al estado 6
    PR_TAKE   desplazar e ir al estado 7
    PR_IF     desplazar e ir al estado 8
    PR_WHILE  desplazar e ir al estado 9
    PR_GET    desplazar e ir al estado 10
    PR_PUT    desplazar e ir al estado 11

    lista_sentencia       ir al estado 52
    sentencia             ir al estado 13
    sent_put              ir al estado 14
    sent_get              ir al estado 15
    seleccion             ir al estado 16
    comienzo_if           ir al estado 17
    sent_repeat           ir al estado 18
    comienzoWhile         ir al estado 19
    sent_asignacion       ir al estado 20
    sent_repeat_especial  ir al estado 21
    sentencia_take        ir al estado 22


estado 28

   62 sent_asignacion: TOKEN_ID OP_ASIGNACION . asignado

    TOKEN_ID     desplazar e ir al estado 53
    CONST_INT    desplazar e ir al estado 54
    CONST_STR    desplazar e ir al estado 55
    CONST_FLOAT  desplazar e ir al estado 56
    PAR_ABRE     desplazar e ir al estado 57

    expresion  ir al estado 58
    termino    ir al estado 59
    factor     ir al estado 60
    asignado   ir al estado 61


estado 29

   73 sentencia_take: PR_TAKE PAR_ABRE . definicion_take PAR_CIERRA

    OP_SUMA            desplazar e ir al estado 62
    OP_RESTA           desplazar e ir al estado 63
    OP_MULTIPLICACION  desplazar e ir al estado 64
    OP_DIVISION        desplazar e ir al estado 65

    definicion_take  ir al estado 66


estado 30

   29 comienzo_if: PR_IF PAR_ABRE . condicion PAR_CIERRA PR_THEN

    TOKEN_ID     desplazar e ir al estado 67
    CONST_INT    desplazar e ir al estado 54
    CONST_FLOAT  desplazar e ir al estado 56
    PAR_ABRE     desplazar e ir al estado 57
    OP_LOG_NOT   desplazar e ir al estado 68

    condicion           ir al estado 69
    condicion_simple    ir al estado 70
    condicion_multiple  ir al estado 71
    expresion           ir al estado 72
    termino             ir al estado 59
    factor              ir al estado 60


estado 31

   70 estructura_in: TOKEN_ID . PR_IN COR_ABRE lista_expresiones COR_CIERRA

    PR_IN  desplazar e ir al estado 73


estado 32

   69 sent_repeat_especial: PR_WHILE estructura_in . PR_DO lista_sentencia PR_ENDWHILE
